2007-03-27	Dmitry Dulepov	<dmitry@typo3.org>

	* Added hook to class.t3lib_userauthgroup.php, function recordEditAccessInternals

2007-03-23	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug 5269: wsol_preview.php does not scroll to content element
	* Fixed bug 4953: Preview in Workspaces Module for Contentelements

2007-03-22  Karsten Dambekalns  <karsten@typo3.org>

	* typo3/sysext/adodb: Update to upstream version 4.94.

2007-03-12  Michael Stucki  <michael@typo3.org>

	* Change copyright information in typo3/index.php (no real change, just replace the hardcoded years with the "TYPO3_copyright_year" constant)

2007-03-12  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Replace all TINYTEXT columns with VARCHAR(255)
	* Change index "parent" of fe_user to (pid,username) and drop the index "pid"
	* Quote table names in admin_get_XXX() functions of t3lib_db

2007-03-06  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.1 / create branch "TYPO3_4-1" for 4.1.x development

2007-03-06  Ingmar Schlecht  <ingmar@typo3.org>

	* Setting default value of pageNotFoundOnCHashError back to "false" (= reverting Stucki's patch) as some extensions had problems with the new default value

2007-03-05  Michael Stucki  <michael@typo3.org>

	* New login image (if no skin is used) by Ture Andersen
	* Added a warning for admins if typo3conf/ENABLE_INSTALL_TOOL exists (which means that the Install Tool is currently enabled)
	* Changed layout of admin warnings (use <li> instead of plain breaks)
	* Fixed bug #5125: Typo in SQL definition of sys_history

2007-03-04  Oliver Hader  <oh@inpublica.de>

	* Fixed bug: #5098: IRRE - foreign_unique without foreign_selector doesn't work

2007-03-01  Oliver Hader  <oh@inpublica.de>

	* Fixed bug: #5069: TSconfig mod.web_list.allowedNewTables used in t3lib_TCEforms_inline
	* Fixed bug: #5092: Typo in Who is online (thanks to Matthias Kall)

2007-03-01  Karsten Dambekalns <karsten@typo3.org>
